--- a/style.css
+++ b/style.css
@@ -103,3 +103,21 @@ section.container {
   transition: 0.3s ease-in-out;
   box-shadow: 0 10px 20px rgba(0,0,0,0.1);
 }
+
+  .dropdown-menu-dark .dropdown-item {
+  color: #fff;
+}
+
+.dropdown-menu-dark .dropdown-item:hover{
+  background-color: #343a40; 
+  color: #fff;
+}
+
+.dropdown-menu-dark .dropdown-item:focus{
+  background-color: #343a40; 
+  color: #fff;
+}
+.dropdown-menu-dark .dropdown-item.active {
+  background-color: #343a40; 
+  color: #fff;
+}
